# tobelabs

./: .gitignore  .wakatime-project  README.md  build.py  pyproject.toml  requirements.txt  setup.py  standard_notes  ve.sh  watch.sh  watch_tests.py  wrangler.jsonc
content/posts/: internalize-time.md  parallel-streams.md  selective-memory.md
static/: style.css
t2/tobelabs/: __main__.py
t2/tobelabs/tests/: test_my_module.py
templates/: base.html  home.html  note.html  notes.html
