[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t2-tobelabs"
version = "0.1"
description = "New!"
authors = [
    { name = "Toby Watson", email = "toby@thetobe.com" },
]
requires-python = ">=3.9"
dependencies = [
    "click",
    "pyfzf",
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "http://github.com/atobe/t2_tobelabs"

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "cfgv>=3.4.0",
    "distlib>=0.3.9",
    "filelock>=3.16.1",
    "flake8>=7.1.1",
    "identify>=2.6.1",
    "iniconfig>=2.0.0",
    "mccabe>=0.7.0",
    "mypy-extensions>=1.0.0",
    "nodeenv>=1.9.1",
    "packaging>=24.1",
    "pathspec>=0.12.1",
    "platformdirs>=4.3.6",
    "pluggy>=1.5.0",
    "pre_commit>=4.0.1",
    "pycodestyle>=2.12.1",
    "pyflakes>=3.2.0",
    "pytest>=8.3.3",
    "PyYAML>=6.0.2",
    "virtualenv>=20.27.0",
    "watchdog>=5.0.3",
    "pyfiglet>=1.0.2",
    "pytest-cov>=4.1.0",
]

# Uncomment to enable CLI entry point
#[project.scripts]
#tobelabs = "t2.tobelabs.__main__:main"

[tool.pytest.ini_options]
addopts = "--cov=t2.tobelabs --cov-report=term-missing"
testpaths = ["t2"]

[tool.coverage.run]
branch = true
source = ["t2/tobelabs"]
omit = ["t2/tobelabs/tests/*"]

[tool.coverage.report]
fail_under = 30

[tool.mypy]
files = "t2"
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
exclude = "watch_tests.py"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.hatch.build.targets.wheel]
packages = ["t2"]

[tool.hatch.metadata]
allow-direct-references = true
